# quant_engine

./: .env.example  .gitignore  ADAPTED_MIGRATION_AUDIT_2026-02-22.md  COMPREHENSIVE_IMPROVEMENT_INSTRUCTIONS.md  MASTER_IMPLEMENTATION_SPECS.md  SPECS_STARTUP_AND_ROADMAP.md  __init__.py  config.py  config_structured.py  pyproject.toml  reproducibility.py  run_autopilot.py  run_backtest.py  run_dash.py  run_intraday_indicators.py  run_kalshi_event_pipeline.py  run_predict.py  run_rehydrate_cache_metadata.py  run_retrain.py  run_server.py  run_train.py  run_wrds_daily_refresh.py  run_wrds_options_download.py  run_wrds_taq_intraday_download.py
api/: __init__.py  ab_testing.py  config.py  errors.py  main.py  orchestrator.py
autopilot/: README.md  __init__.py  _atomic_write.py  engine.py  meta_labeler.py  paper_trader.py  promotion_gate.py  registry.py  strategy_allocator.py  strategy_discovery.py
backtest/: README.md  __init__.py  _scipy_compat.py  adv_tracker.py  advanced_validation.py  cost_calibrator.py  cost_stress.py  engine.py  execution.py  null_models.py  optimal_execution.py  sharpe_utils.py  survivorship_comparison.py  validation.py
config_data/: __init__.py  health.yaml  universe.yaml
dash_ui/: README.md  __init__.py  app.py  server.py  theme.py
data/: README.md  __init__.py  alternative.py  cross_source_validator.py  feature_store.py  intraday_quality.py  loader.py  local_cache.py  provider_base.py  provider_registry.py  quality.py  survivorship.py  wrds_provider.py
docs/: README.md  portfolio_layer_guide.md
evaluation/: __init__.py  calibration_analysis.py  engine.py  fragility.py  metrics.py  ml_diagnostics.py  slicing.py  visualization.py
features/: README.md  __init__.py  harx_spillovers.py  intraday.py  lob_features.py  macro.py  options_factors.py  pipeline.py  research_factors.py  version.py  wave_flow.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
indicators/: __init__.py  eigenvalue.py  indicators.py  ot_divergence.py  spectral.py  ssa.py  tail_risk.py
kalshi/: README.md  __init__.py  client.py  disagreement.py  distribution.py  events.py  mapping_store.py  microstructure.py  options.py  pipeline.py  promotion.py  provider.py  quality.py  regimes.py  router.py  storage.py  walkforward.py
models/: README.md  __init__.py  calibration.py  conformal.py  cross_sectional.py  feature_stability.py  governance.py  neural_net.py  online_learning.py  predictor.py  retrain_trigger.py  shift_detection.py  trainer.py  versioning.py  (+1 more)
(+2415 files in other folders)
